<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?attr/selectableItemBackground"
              android:gravity="center"
              android:orientation="horizontal"
              android:padding="16dp">

  <ImageView
      android:contentDescription="@string/recipe_image"
      android:id="@+id/imageView"
      android:layout_width="50dp"
      android:layout_height="50dp"
      tools:background="#f00"/>

  <TextView
      android:id="@+id/title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_weight="1"
      tools:text="Recipe title/description"/>

  <ImageView
      android:contentDescription="@string/add_remove_favorite"
      android:id="@+id/favButton"
      android:layout_width="24dp"
      android:layout_height="24dp"
      tools:srcCompat="@drawable/ic_favorite_24dp"/>

</LinearLayout>
